tests/snapshots/validation-charges-charge_size.snap
---
source: tests/harness/case.rs
expression: "validate_fit(eft_fit, skills, edit)"
---
high_1/charge/EMP M = charge_size 2 module takes 1
