tests/snapshots/validation-items-capital_item.snap
---
source: tests/harness/case.rs
expression: "validate_fit(eft_fit, skills, edit)"
---
ship                               = resource Cpu 330.000000 of 162.500000
ship                               = resource Powergrid 82500.000000 of 51.250000
medium_1/Capital Shield Booster II = capital_item
