tests/snapshots/validation-items-ship_module_on_structure.snap
---
source: tests/harness/case.rs
expression: "validate_fit(eft_fit, skills, edit)"
---
low_1/Damage Control II = ship_item
